Update README.md & index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <img class="film1" src="./assets/img1.jpg" alt="film1" id="film">
                         </div>
                         <div class="swiper-slide">
-                            <img class="film2" src="/assets/img2.jpg" alt="film2" id="film">
+                            <img class="film2" src="./assets/img2.jpg" alt="film2" id="film">
                         </div>
                         <div class="swiper-slide">
                             <img class="film3" src="./assets/img3.jpg" alt="film3" id="film">
